--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,4 @@
-# Build directory
-build/
-.cache/
+build/*
 
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-.idea/
-
-# specific files
-compile_commands.jso
-deploy
-imgui/backends/vulkan/generate_spv.sh
-.vscode/
-
-# promo assets
-promo_screenshots/
-compile_commands.json
+note/*
+note.txt
