--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,28 +7,41 @@ on:
   workflow_dispatch:
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
+  DEVKITPRO: /opt/devkitpro
+  DEVKITARM: /opt/devkitpro/devkitARM
+  DEVKITPPC: /opt/devkitpro/devkitPPC
+  LANG: en_US.UTF-8
 
 jobs:
   Compile:
-    runs-on: ubuntu-22.04
-    container: pixelkiri/devkitpro-alpine-switch:latest
+    runs-on: ubuntu-24.04
+    container: archlinux/archlinux:base-devel
 
     steps:
+    - name: install github releaser
+      run: |
+        sudo pacman -Syu --noconfirm
+        sudo pacman -S git zip wget --noconfirm # thats right, git is not in base-devel
+        wget -q https://github.com/cli/cli/releases/download/v2.54.0/gh_2.54.0_linux_amd64.tar.gz
+        tar xf gh_2.54.0_linux_amd64.tar.gz
+        mv ./gh_2.54.0_linux_amd64/bin/gh /__w/gh # idk
+        rm -rf ./gh_2.54.0_linux_amd64 gh_2.54.0_linux_amd64.tar.gz
+
+    - name: install devkitpro
+      run: |
+        sudo pacman-key --init
+        sudo pacman-key --recv BC26F752D25B92CE272E0F44F7FD5492264BB9D0 --keyserver keyserver.ubuntu.com
+        sudo pacman-key --lsign BC26F752D25B92CE272E0F44F7FD5492264BB9D0
+        sudo pacman -U https://pkg.devkitpro.org/devkitpro-keyring.pkg.tar.zst --noconfirm
+        echo -e "[dkp-libs]\nServer = https://pkg.devkitpro.org/packages\n[dkp-linux]\nServer = https://pkg.devkitpro.org/packages/linux/\$arch/" >> /etc/pacman.conf
+        sudo pacman -Syu --noconfirm
+        sudo pacman -S switch-dev --noconfirm
+        echo /opt/devkitpro/tools/bin >> $GITHUB_PATH
+
     - name: Checkout repo
       uses: actions/checkout@v4
       with:
-        submodules: recursive
         fetch-depth: '0'
-
-    - name: Install tooling
-      run: |
-        sudo apk add zip wget
-        wget -q https://github.com/cli/cli/releases/download/v2.54.0/gh_2.54.0_linux_amd64.tar.gz
-        tar xf gh_2.54.0_linux_amd64.tar.gz
-        mv ./gh_2.54.0_linux_amd64/bin/gh ./gh
-        rm -rf ./gh_2.54.0_linux_amd64 gh_2.54.0_linux_amd64.tar.gz
 
     - name: Setup CMake
       uses: jwlawson/actions-setup-cmake@v1.13
@@ -40,35 +53,35 @@ jobs:
 
     - name: Zip 100
       run: |
-        mkdir -p totk100_lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk100_lotuskit/exefs
-        cp -r frontend romfs totk100_lotuskit
-        zip -r totk100_lotuskit totk100_lotuskit
+        mkdir -p totk100-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 totk100-lotuskit/exefs
+        cp -r frontend romfs totk100-lotuskit
+        zip -r totk100-lotuskit-${{ github.sha }}.zip totk100-lotuskit
 
     - name: Build 110
       run: cmake -DTOTK_VERSION=110 --toolchain=cmake/toolchain.cmake -S . -B build && make -C build subsdk9_meta -j4
 
     - name: Zip 110
       run: |
-        mkdir -p totk110_lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk110_lotuskit/exefs
-        cp -r frontend romfs totk110_lotuskit
-        zip -r totk110_lotuskit totk110_lotuskit
+        mkdir -p totk110-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 totk110-lotuskit/exefs
+        cp -r frontend romfs totk110-lotuskit
+        zip -r totk110-lotuskit-${{ github.sha }}.zip totk110-lotuskit
 
     - name: Build 121
       run: cmake -DTOTK_VERSION=121 --toolchain=cmake/toolchain.cmake -S . -B build && make -C build subsdk9_meta -j4
 
     - name: Zip 121
       run: |
-        mkdir -p totk121_lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk121_lotuskit/exefs
-        cp -r frontend romfs totk121_lotuskit
-        zip -r totk121_lotuskit totk121_lotuskit
+        mkdir -p totk121-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 totk121-lotuskit/exefs
+        cp -r frontend romfs totk121-lotuskit
+        zip -r totk121-lotuskit-${{ github.sha }}.zip totk121-lotuskit
 
     - name: Create Release
       run: |
         git config --global --add safe.directory /__w/totk-lotuskit/totk-lotuskit
-        ./gh release delete latest -y --cleanup-tag
-        ./gh release create latest totk100_lotuskit.zip totk110_lotuskit.zip totk121_lotuskit.zip
+        /__w/gh release delete latest -y --cleanup-tag
+        /__w/gh release create latest totk*-lotuskit-${{ github.sha }}.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
