small exl/module patches

--- a/module/subsdk9.json.template
+++ b/module/subsdk9.json.template
@@ -228,7 +228,8 @@
             "type":"debug_flags",
             "value":{
                 "allow_debug":true,
-                "force_debug":false
+                "force_debug":false,
+                "force_debug_prod":false
             }
         }
     ]
