--- a/module/subsdk9.specs.template
+++ b/module/subsdk9.specs.template
@@ -1,7 +1,7 @@
 %rename link old_link_
 
 *link:
-%(old_link_) -T ../module/subsdk9.ld -T ../syms/output/TOTK_@TOTK_VERSION@/syms_merged.ld --no-demangle --shared --export-dynamic --gc-sections --build-id=sha1 --nx-module-name -init=exl_module_init --exclude-libs=ALL
+%(old_link_) -T ../module/subsdk9.ld -T ../syms/output/TOTK_@TOTK_VERSION@/syms_merged.ld --no-demangle --shared --export-dynamic -z nodynamic-undefined-weak --gc-sections --build-id=sha1 --nx-module-name -init=exl_module_init --exclude-libs=ALL
 
 *startfile:
 crti%O%s crtbegin%O%s
