--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Zip 100
       run: |
         mkdir -p totk100-lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk100-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 build/subsdk9.elf totk100-lotuskit/exefs
         cp -r frontend romfs totk100-lotuskit
         zip -r totk100-lotuskit-${{ github.sha }}.zip totk100-lotuskit
 
@@ -45,7 +45,7 @@ jobs:
     - name: Zip 110
       run: |
         mkdir -p totk110-lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk110-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 build/subsdk9.elf totk110-lotuskit/exefs
         cp -r frontend romfs totk110-lotuskit
         zip -r totk110-lotuskit-${{ github.sha }}.zip totk110-lotuskit
 
@@ -55,7 +55,7 @@ jobs:
     - name: Zip 121
       run: |
         mkdir -p totk121-lotuskit/exefs
-        cp build/main.npdm build/subsdk9 totk121-lotuskit/exefs
+        cp build/main.npdm build/subsdk9 build/subsdk9.elf totk121-lotuskit/exefs
         cp -r frontend romfs totk121-lotuskit
         zip -r totk121-lotuskit-${{ github.sha }}.zip totk121-lotuskit
 
